0.13/_sources/api/generated/deepchecks.tabular.checks.model_evaluation.TrainTestPredictionDrift.rst.txt

TrainTestPredictionDrift
========================



.. currentmodule:: deepchecks.tabular.checks.model_evaluation

.. autoclass:: TrainTestPredictionDrift
   :special-members: __init__







.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   TrainTestPredictionDrift.add_condition
   
   
   TrainTestPredictionDrift.add_condition_drift_score_less_than
   
   
   TrainTestPredictionDrift.clean_conditions
   
   
   TrainTestPredictionDrift.conditions_decision
   
   
   TrainTestPredictionDrift.config
   
   
   TrainTestPredictionDrift.from_config
   
   
   TrainTestPredictionDrift.from_json
   
   
   TrainTestPredictionDrift.greater_is_better
   
   
   TrainTestPredictionDrift.metadata
   
   
   TrainTestPredictionDrift.name
   
   
   TrainTestPredictionDrift.params
   
   
   TrainTestPredictionDrift.prediction_drift
   
   
   TrainTestPredictionDrift.reduce_output
   
   
   TrainTestPredictionDrift.remove_condition
   
   
   TrainTestPredictionDrift.run
   
   
   TrainTestPredictionDrift.run_logic
   
   
   TrainTestPredictionDrift.to_json
   


















