0.18/_sources/api/generated/deepchecks.tabular.checks.model_evaluation.TrainTestPredictionDrift.rst.txt

TrainTestPredictionDrift
========================



.. currentmodule:: deepchecks.tabular.checks.model_evaluation

.. autoclass:: TrainTestPredictionDrift
   :special-members: __init__



.. rubric:: Attributes

.. autosummary::
   :toctree:

   
   TrainTestPredictionDrift.aggregation_method
   

   
   TrainTestPredictionDrift.balance_classes
   

   
   TrainTestPredictionDrift.categorical_drift_method
   

   
   TrainTestPredictionDrift.drift_mode
   

   
   TrainTestPredictionDrift.ignore_na
   

   
   TrainTestPredictionDrift.margin_quantile_filter
   

   
   TrainTestPredictionDrift.max_classes_to_display
   

   
   TrainTestPredictionDrift.max_num_categories_for_display
   

   
   TrainTestPredictionDrift.max_num_categories_for_drift
   

   
   TrainTestPredictionDrift.min_category_size_ratio
   

   
   TrainTestPredictionDrift.min_samples
   

   
   TrainTestPredictionDrift.n_samples
   

   
   TrainTestPredictionDrift.numerical_drift_method
   

   
   TrainTestPredictionDrift.random_state
   

   
   TrainTestPredictionDrift.show_categories_by
   






.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   TrainTestPredictionDrift.add_condition
   
   
   TrainTestPredictionDrift.add_condition_drift_score_less_than
   
   
   TrainTestPredictionDrift.clean_conditions
   
   
   TrainTestPredictionDrift.conditions_decision
   
   
   TrainTestPredictionDrift.config
   
   
   TrainTestPredictionDrift.from_config
   
   
   TrainTestPredictionDrift.from_json
   
   
   TrainTestPredictionDrift.greater_is_better
   
   
   TrainTestPredictionDrift.metadata
   
   
   TrainTestPredictionDrift.name
   
   
   TrainTestPredictionDrift.params
   
   
   TrainTestPredictionDrift.reduce_output
   
   
   TrainTestPredictionDrift.remove_condition
   
   
   TrainTestPredictionDrift.run
   
   
   TrainTestPredictionDrift.run_logic
   
   
   TrainTestPredictionDrift.to_json
   


















